src/test/ui/type/type-ascription-soundness.stderr
error[E0308]: mismatched types
  --> $DIR/type-ascription-soundness.rs:7:17
   |
LL |     let ref x = arr: &[u8];
   |                 ^^^ expected slice, found array of 3 elements
   |
   = note: expected type `&[u8]`
              found type `&[u8; 3]`

error[E0308]: mismatched types
  --> $DIR/type-ascription-soundness.rs:8:21
   |
LL |     let ref mut x = arr: &[u8];
   |                     ^^^ expected slice, found array of 3 elements
   |
   = note: expected type `&[u8]`
              found type `&[u8; 3]`

error[E0308]: mismatched types
  --> $DIR/type-ascription-soundness.rs:9:11
   |
LL |     match arr: &[u8] {
   |           ^^^ expected slice, found array of 3 elements
   |
   = note: expected type `&[u8]`
              found type `&[u8; 3]`

error[E0308]: mismatched types
  --> $DIR/type-ascription-soundness.rs:12:17
   |
LL |     let _len = (arr: &[u8]).len();
   |                 ^^^ expected slice, found array of 3 elements
   |
   = note: expected type `&[u8]`
              found type `&[u8; 3]`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
